# rust-dwarf-debugger

./: Cargo.toml  WasmBinaryLexer.g4  WasmBinaryParser.g4
src/: bitpack_bg.wasm  custom_sections.rs  debug_data.rs  error.rs  main.rs  source_maps.rs  state_management.rs  test_wasm.wasm  wasm_parser.rs
src/debug_information_storage/models/: symbol_info.rs  symbol_table.rs
src/debug_sections/: debug_loc.rs  debug_ranges.rs
src/die_types/: class_type.rs
src/die_types/models/: class_info.rs  compile_unit_info.rs  constant_info.rs  enum_info.rs  global_variable_info.rs  label_info.rs  line_number_info.rs  member_variable_info.rs  namespace_info.rs  source_file_info.rs  template_info.rs  typedef_info.rs
src/die_types/parse_types/: parse_class.rs  parse_constant.rs  parse_enum.rs  parse_namespace.rs  parse_typedef.rs
src/wasm_sections/: global_section.rs  import_section.rs  mod.rs
src/wasm_types/: heap_type.rs
