[package]
name = "rust-dwarf-debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmparser="0.82.0"
thiserror= { version = "1.0", features = [] }
gimli = { version = "0.26.1", features = [] }
memmap2 = "0.9.0"
object = "0.32.1"

lazy_static = "1.4.0"
parking_lot = "0.11.1"

